Introduce Arguments record and refactor Compiler to use it for improved argument handling